--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ body {
 .section:hover {
     border: 1px solid var(--text-color);
     box-shadow: 1px 1px 15px var(--text-color);
-    transform: scale(1.1);
     opacity: 0.85;
 }
 
@@ -147,4 +146,26 @@ textarea {
     margin-top: 24px;
     margin-bottom: 6px;
     text-align: left;
+}
+
+@media (max-width: 739px) {
+    .wrapper {
+        width: calc(100% - 32px);
+        max-width: calc(739px - 32px);
+    }
+
+    .section:hover {
+        border: 1px solid var(--text-color);
+        box-shadow: 1px 1px 15px var(--text-color);
+        opacity: 0.85;
+    }
+
+    .content {
+     flex-direction: column;   
+    }
+
+    .run,
+    .code {
+        width: 100%;
+    }
 }
